# Matlite

./: .gitignore  CMakeLists.txt  README.md
docs/: PROJECT_STRUCTURE.md
src/: main.cpp
src/ast/: Expression.cpp  Expression.h
src/evaluator/: Evaluator.cpp  Evaluator.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: Parser.cpp  Parser.h
tests/: evaluator_tests.cpp  lexer_tests.cpp  parser_tests.cpp
